added connect page feature

--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "facebook-sdk": "^0.3.3",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-facebook-login": "^4.1.1"
+    "react-facebook-login": "^4.1.1",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/client-preset": "4.2.2",
+    "@graphql-codegen/introspection": "4.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
