--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/page.jsx"
+    "app/page.jsx",
+    "components/auth/FacebookLogin/FacebookLogin.jsx"
   ],
   "exclude": ["node_modules"]
 }
